src/app/chat/chat.component.scss
.render-reverse-column {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

.rank-image {
    width: 20px;
    padding-left: 10px;
}

.sticker {
    width: 230px;
    padding-top: 5px;
}

.message-header {
    font-family: 'Montserrat';
    font-size: 18px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;

    display: flex;
    width: 100%;
}

.vertical-center {
    height: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.message {
    padding-left: 10px;
    padding-right: 20px;
    padding-top: 15px;
}

.message-text {
    color: var(--chat-msg);
    word-wrap: break-word;
}

img.message-emoji {
    vertical-align: bottom;
}

img.message-emoji:not(.small) {
    width: 70px;
}

img.message-emoji.small {
    height: 18px;
    display: inline;
}

.message-chunk {
    display: inline-block;
    justify-content: baseline;
}

.message-chunk.pad-left {
    margin-left: 0.3em;
}

.chat-container {
    height: 100%;
    background-color: #1F1F1F;
}

